k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team9
  labels:
    app.kubernetes.io/part-of: cs4383-pa2
